# sceptreAI

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.inference  Dockerfile.mlflow  Dockerfile.postgresql  Dockerfile.seaweedfs  Dockerfile.training  Dockerfile.training.cpu  Dockerfile.training.intel  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements-inference-upload.txt  requirements-inference.txt  requirements-training.txt  requirements-zenml-local.txt
.github/workflows/: ci.yml  fastforward-merge.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_expand_artifact_kind.py
apps/api/automl_api/: __init__.py  main.py
apps/ui/react_app/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/ui/streamlit_app/: app.py  compat.py  workspace.py
docs/architecture/: database-schema.md  directory-structure.md  implementation-plan.md  kubernetes-portability.md
docs/decisions/: 0001-decoupled-smme-automl.md
docs/production-readiness/: README.md
docs/ux/: react-migration-plan.md
infra/helm/sceptre/: Chart.yaml  README.md  values-intel.yaml  values-k3d.yaml  values-kind.yaml  values-local.yaml  values-microk8s.yaml  values-minikube.yaml  values-nvidia.yaml  values.yaml  (+1 more)
infra/k8s/: README.md
scripts/: create_dev_schema.py  create_mlflow_database.sql  mlflow_migrate_if_initialized.py  reclaim_windows_space.sh  validate_clustering_report.py  validate_staged_profiling.py  validate_training_orchestration.py  verify_database_schema.py
tests/: test_auth_lifecycle.py  test_dataset_inspection.py  test_inference_gateway.py  test_metadata.py  test_model_audit.py  test_monitoring.py  test_operations.py  test_profiling.py  test_routes.py  test_security.py  test_streamlit_navigation.py  test_temporal.py  test_training.py  test_training_cancellation.py  test_training_correlation.py  test_training_evaluation.py  test_training_leaderboard.py  test_validation.py
(+133 files in other folders)
