[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smme-tabular-automl"
version = "0.1.3"
description = "SMME-safe tabular AutoML platform with FastAPI, React, PostgreSQL, and Kubernetes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "dask[dataframe]>=2024.8",
    "fastapi>=0.111",
    "httpx>=0.27,<1",
    "minio>=7.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "reportlab>=4.2",
    "psutil>=5.9",
    "s3fs>=2024.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "ruff>=0.5",
]
ml = [
    "catboost>=1.2",
    "evidently>=0.4",
    "lightgbm>=4.3",
    "mlflow>=2.14",
    "pandas>=2.2",
    "scikit-learn==1.5.1",
    "scikit-optimize==0.10.2",
    "shap>=0.45",
    "xgboost-cpu>=2.1,<3",
    "zenml>=0.60",
]
k8s = [
    "kubernetes>=30.1",
]
training = [
    "catboost>=1.2",
    "lightgbm>=4.3",
    "mlflow>=2.14",
    "openpyxl>=3.1",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "scikit-optimize>=0.10",
    "shap>=0.45,<1",
    "xgboost-cpu>=2.1,<3",
    "zenml>=0.60",
]

[tool.setuptools.packages.find]
where = ["apps/api", "packages"]
include = ["automl_api*", "automl_shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api", "packages"]

[tool.coverage.run]
branch = true
source = ["automl_api"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
